# opensrme

./: .gitignore  Cargo.toml
src/: datainputstream.rs  main.rs
src/common/: Cargo.toml
src/common/src/: archive.rs  datastream.rs  game.rs  graphics.rs  lib.rs  manifest.rs  platform.rs  platform_sdl.rs  time.rs  types.rs
src/lsw2/: Cargo.toml
src/lsw2/src/: lib.rs
src/sr2/: Cargo.toml
src/sr2/src/: bin_all.rs  collision.rs  controller.rs  dialog.rs  entity.rs  globals.rs  image.rs  input.rs  level.rs  lib.rs  person.rs  route.rs  screen.rs  sprite.rs  text.rs  types.rs  util.rs  vehicle.rs
tools/: read_bin.py
