[workspace]
members = [
 "src/common",
 "src/sr2"
]

[package]
name = "opensrme"
version = "0.0.1"
authors = ["tzizi"]

[profile.release]
#opt-level = 'z' # makes it larger?
#codegen-units = 1 # slower compilation
lto = true
panic = 'abort'

[dependencies]
"opensrme_common" = { path = "src/common" }
"opensrme_sr2" = { path = "src/sr2" }
