[package]
name = "opensrme_common"
version = "0.0.1"
authors = ["tzizi"]

[dependencies]
byteorder = "1"
#piston_window = "0.81.0"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[dependencies.sdl2]
version = "*"
features = ["unsafe_textures"]

[lib]
name = "opensrme_common"
path = "src/lib.rs"